--- a/src/App.css
+++ b/src/App.css
@@ -8,27 +8,7 @@
   grid-template-areas:
     "h h"
     "n c";
-
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 80px 1fr;
   grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
-}
-
-.header {
-  grid-area: h;
-  background-color: green;
-}
-
-.header img {
-  width: 30px;
-}
-
-.nav {
-  grid-area: n;
-  background-color: darkgoldenrod;
-}
-
-.content {
-  grid-area: c;
-  background-color: darkorchid;
+  grid-gap: 10px;
 }
